# learn_calculus_with_claude

./: .gitignore  README.md  claude.md  derivatives_clarified.md  lesson1_introduction.md  lesson2_limits.md  lesson3_derivatives_intro.md  pyproject.toml
notebooks/: derivatives_clarified.ipynb  lesson1_introduction.ipynb  lesson2_limits.ipynb  lesson3_derivatives_intro.ipynb
